// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should mount an complete notification-dialog 1`] = `
<CompleteNotificationDialog>
  <div>
    <NotificationDialog
      actions={
        Array [
          <Button
            id="notification-dialog-ok"
            isBlock={false}
            isCompact={false}
            isDisabled={false}
            isIconOnly={false}
            isReversed={false}
            onClick={[Function]}
            text="Ok"
            type="button"
            variant="neutral"
          />,
          <Button
            id="notification-dialog-close"
            isBlock={false}
            isCompact={false}
            isDisabled={false}
            isIconOnly={false}
            isReversed={false}
            onClick={[Function]}
            text="Close"
            type="button"
            variant="neutral"
          />,
        ]
      }
      message="Click ok to show alert and Close to go back."
      onRequestClose={[Function]}
      showNotificationDialog={false}
      title="Title goes here"
    />
    <Button
      id="trigger-notification-dialog"
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isIconOnly={false}
      isReversed={false}
      onClick={[Function]}
      text="Trigger NotificationDialog"
      type="button"
      variant="neutral"
    >
      <button
        aria-disabled={false}
        aria-label={null}
        className="button neutral"
        disabled={false}
        id="trigger-notification-dialog"
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <span
          className="text-only"
        >
          <span
            className=""
          >
            Trigger NotificationDialog
          </span>
        </span>
      </button>
    </Button>
  </div>
</CompleteNotificationDialog>
`;

exports[`should mount an complete notification-dialog with long message 1`] = `
<CompleteNotificationDialog>
  <div>
    <NotificationDialog
      actions={
        Array [
          <Button
            id="notification-dialog-ok"
            isBlock={false}
            isCompact={false}
            isDisabled={false}
            isIconOnly={false}
            isReversed={false}
            onClick={[Function]}
            text="Ok"
            type="button"
            variant="neutral"
          />,
          <Button
            id="notification-dialog-close"
            isBlock={false}
            isCompact={false}
            isDisabled={false}
            isIconOnly={false}
            isReversed={false}
            onClick={[Function]}
            text="Close"
            type="button"
            variant="neutral"
          />,
        ]
      }
      message="Click ok to show alert and Close to go back.Click ok to show alert and Close to go back.Click ok to show alert and Close to go back.Click ok to show alert and Close to go back.Click ok to show alert and Close to go back.Click ok to show alert and Close to go back."
      onRequestClose={[Function]}
      showNotificationDialog={false}
      title="Title goes here"
    />
    <Button
      id="trigger-notification-dialog"
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isIconOnly={false}
      isReversed={false}
      onClick={[Function]}
      text="Trigger NotificationDialog"
      type="button"
      variant="neutral"
    >
      <button
        aria-disabled={false}
        aria-label={null}
        className="button neutral"
        disabled={false}
        id="trigger-notification-dialog"
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <span
          className="text-only"
        >
          <span
            className=""
          >
            Trigger NotificationDialog
          </span>
        </span>
      </button>
    </Button>
  </div>
</CompleteNotificationDialog>
`;

exports[`should shallow a complete notification-dialog 1`] = `
<div>
  <NotificationDialog
    actions={
      Array [
        <Button
          id="notification-dialog-ok"
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={false}
          isReversed={false}
          onClick={[Function]}
          text="Ok"
          type="button"
          variant="neutral"
        />,
        <Button
          id="notification-dialog-close"
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={false}
          isReversed={false}
          onClick={[Function]}
          text="Close"
          type="button"
          variant="neutral"
        />,
      ]
    }
    message="Click ok to show alert and Close to go back."
    onRequestClose={[Function]}
    showNotificationDialog={false}
    title="Title goes here"
  />
  <Button
    id="trigger-notification-dialog"
    isBlock={false}
    isCompact={false}
    isDisabled={false}
    isIconOnly={false}
    isReversed={false}
    onClick={[Function]}
    text="Trigger NotificationDialog"
    type="button"
    variant="neutral"
  />
</div>
`;

exports[`should shallow a complete notification-dialog with long message 1`] = `
<div>
  <NotificationDialog
    actions={
      Array [
        <Button
          id="notification-dialog-ok"
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={false}
          isReversed={false}
          onClick={[Function]}
          text="Ok"
          type="button"
          variant="neutral"
        />,
        <Button
          id="notification-dialog-close"
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={false}
          isReversed={false}
          onClick={[Function]}
          text="Close"
          type="button"
          variant="neutral"
        />,
      ]
    }
    message="Click ok to show alert and Close to go back.Click ok to show alert and Close to go back.Click ok to show alert and Close to go back.Click ok to show alert and Close to go back.Click ok to show alert and Close to go back.Click ok to show alert and Close to go back."
    onRequestClose={[Function]}
    showNotificationDialog={false}
    title="Title goes here"
  />
  <Button
    id="trigger-notification-dialog"
    isBlock={false}
    isCompact={false}
    isDisabled={false}
    isIconOnly={false}
    isReversed={false}
    onClick={[Function]}
    text="Trigger NotificationDialog"
    type="button"
    variant="neutral"
  />
</div>
`;
